# pyth_casino

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Dockerfile  LICENSE  PERFORMANCE_NOTES.md  PYTH_ENTROPY_SETUP.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_ENV_TEMPLATE.txt  cleanup-stuck-requests.sql  next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.json  test-pg-mem.ts  test_anchor.js  test_api.js  test_solana_setup.ts  tsconfig.json  vitest.config.ts
anchor/: Anchor.toml  README.md
anchor/programs/pyth_roulette/: Cargo.toml
anchor/programs/pyth_roulette/src/: lib.rs
app/: globals.css  landing.module.css  layout.tsx  page.module.css  page.tsx
components/: GameCard.module.css  GameCard.tsx  LiveBetsFeed.module.css  LiveBetsFeed.tsx  MarketPulse.module.css  MarketPulse.tsx  Navbar.module.css  Navbar.tsx  PhantomWalletButton.module.css  PhantomWalletButton.tsx  PrivyAuthProvider.tsx  ProofPanel.module.css  ProofPanel.tsx  ResultOverlay.module.css  ResultOverlay.tsx  SolanaProvider.tsx  SolanaWalletProvider.tsx  SymbolIcon.module.css  SymbolIcon.tsx  Toast.module.css  Toast.tsx  TokenWallet.module.css  TokenWallet.tsx  Tooltip.module.css  Tooltip.tsx  TransactionResultCard.module.css  TransactionResultCard.tsx
context/: LiveBetsContext.tsx  MarketDataContext.tsx  ProofContext.tsx  SoundContext.tsx  WalletContext.tsx
docs/: API_REFERENCE.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  GAME_LOGIC.md
lib/: anchor.ts  auth.ts  clientCasinoAuth.ts  clientGameRounds.ts  db.ts  entropy.ts  gameRounds.ts  (+16 more)
(+62 files in other folders)
