[package]
name = "pyth_roulette"
version = "0.1.0"
description = "Pyth Casino on-chain Price Roulette (devnet demo)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_roulette"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
pyth-sdk-solana = "0.10.2"
